// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`test harness records snapshot approvals 1`] = `
"module Example {
  val answer = 42
}"
`;

exports[`formatter formats an empty module 1`] = `
"module Example {
}
"
`;

exports[`formatter checks a compact empty module 1`] = `
"test/fixtures/compact-empty-module.qnt:1:16: error[format/empty-module]: empty module braces must be on separate lines
  |
1 | module Example {}
  |                ^^
  |
"
`;
